# RANtern

./: .gitignore  .gitmodules  README.md  requirements.txt  run.sh  setup.sh
backend/: pyproject.toml  requirements.txt  setup.py
backend/api/: __init__.py  main.py  ws.py
backend/api/routes/: config.py  profiles.py  provision.py  test.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  plotly.d.ts
frontend/src/components/: Layout.tsx  Plot.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  History.tsx  NGAPStats.tsx  Profile.tsx  Provision.tsx  Settings.tsx  UETest.tsx
frontend/src/services/: api.ts
scripts/: diagnose_nas_mac.py
